[tool.poetry]
name = "x-integrator"
version = "0.1.0"
description = ""
authors = ["Niklas Alexander Shern <test@test.test>"]
readme = "README.md"
packages = [{include = "x_integrator"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
